--- a/index.html
+++ b/index.html
@@ -80,30 +80,14 @@ footer {
 }
 
 .slide img {
-    width: 100%;<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Site</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<style>
-    body {
-…    </script>
-</body>
-</html>
+    width: 100%;
+
 
     height: auto;
 }
 .Imagem {
     border-radius: 20px;
 }
-
-
-
-
-
 </style>
 <body>
     <header>
