--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ header {
     color: #000000;
     padding: 20px;
     text-align: center;
+    background-position: center;
+    background-size: cover;
+    
 }
 
 nav ul {
@@ -90,7 +93,7 @@ footer {
 }
 </style>
 <body>
-    <header>
+    <header style="background-image: url(bannerccb.jpg);">
         <h1><img src="logoccb.jpg" class="logoccb"></h1>
         <nav>
             <ul>
