--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@ section {
         <nav>
             <ul>
                 <li><a href="#home" class="posHome">Início</a></li>
-                <li><a href="#sobre" class="posHome">Sobre</a></li>
+                <li><a href="sobrenos.html" class="posHome">Sobre</a></li>
                 <li><a href="#contato" class="posHome">Contato</a></li>
                 <li><a href="#musica" class="posHome">Musica</a></li>
-                <li><a href="#galerias" class="posHome1">Galeria</a></li>
+                <li><a href="galeria.html" class="posHome1">Galeria</a></li>
             </ul>
         </nav>
     </header>
