--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Site</title>
+    <title>Congregação</title>
     
 </head>
 <style>
@@ -163,10 +163,10 @@ section {
         </section>
         <nav>
             <ul>
-                <li><a href="#home" class="posHome">Início</a></li>
+                <li><a href="index.html" class="posHome">Início</a></li>
                 <li><a href="sobrenos.html" class="posHome">Sobre</a></li>
-                <li><a href="#contato" class="posHome">Contato</a></li>
-                <li><a href="#musica" class="posHome">Musica</a></li>
+                <li><a href="contato.html" class="posHome">Contato</a></li>
+                <li><a href="musica.html" class="posHome">Musica</a></li>
                 <li><a href="galeria.html" class="posHome1">Galeria</a></li>
             </ul>
         </nav>
@@ -239,6 +239,4 @@ section {
       </footer>
 </body>
 </html>
-
-
 
