--- a/galeria.html
+++ b/galeria.html
@@ -103,10 +103,10 @@ nav ul li a:hover {
     </section>
     <nav>
         <ul>
-            <li><a href="ccb.html" class="posHome">Início</a></li>
-            <li><a href="#sobre" class="posHome">Sobre</a></li>
-            <li><a href="#contato" class="posHome">Contato</a></li>
-            <li><a href="#musica" class="posHome">Musica</a></li>
+            <li><a href="index.html" class="posHome">Início</a></li>
+            <li><a href="sobrenos.html" class="posHome">Sobre</a></li>
+            <li><a href="contato.html" class="posHome">Contato</a></li>
+            <li><a href="musica.html" class="posHome">Musica</a></li>
             <li><a href="galeria.html" class="posHome1">Galeria</a></li>
         </ul>
     </nav>
